[package]
name = "bagextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
zip = "0.5.13"
tempdir = "0.3.7"
chrono = { version = "0.4.19", features = ["serde"] }
