[package]
name = "bagextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = "1.0"
quick-xml = { version = "0.18.1" }
zip = "0.5.13"
tempdir = "0.3.7"
geo =  { version = "0.18.0"} 
rijksdriehoek = "0.1.0"
memmap = "0.7.0"
geoutils = "0.4.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
