[package]
name = "bagextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
quick-xml = { version = "0.18.1" }
zip = "0.5.13"
memmap = "0.7.0"
rayon = "1.5.1"

postgres = "0.19.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

# [profile.release]
# debug = 1
